Adds functionalities to add/delete/check checklistItems

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <form class="todo-form">
                 <input type="text" name="addTodo" placeholder="Add a new todo"/>
             </form>
-            <div class="checklists"/>
+            <div class="checklists">
+                <ul class="checklist-items"></ul>
+            </div>
         </div>
     </section>
     
